{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Player",
            "id": "77bb343b-850a-40b5-a219-cde87546ee1c",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "ac466e45-1f90-4f9e-b544-d32c17cb92ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Accept",
                    "type": "Button",
                    "id": "7c46808d-95b4-4e22-9859-0005853f3da4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a6b2b84f-d74d-4468-a41e-96d43055f2da",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7c17c556-3387-4619-882c-0614b3beeeaf",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox Control Scheme",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56c02fdf-0905-46b9-85f9-62546ad296e1",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox Control Scheme",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54f27978-259a-4d76-8534-def7074c6363",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox Control Scheme",
                    "action": "Accept",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7b826e3-93ae-4279-b3c7-f3fa4a6c91fe",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "593b493f-4eff-41b7-87f4-89c1c4392919",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "XBox Control Scheme",
            "bindingGroup": "XBox Control Scheme",
            "devices": []
        }
    ]
}